1. finished ML Baseline (LR and RF) 2. Setup-ed HDInsight and GPU enabled docker in Azure. See README.md for login instructions

--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +213,7 @@
     "    def __init__(self):\n",
     "        pass\n",
     "    \n",
-    "    def fit(self, df, maxIter=5, regParam=0.0, featuresCol=\"features\", ignoreCols=[\"id\"]):\n",
+    "    def fit(self, df, maxIter=100, regParam=0.0, featuresCol=\"features\", ignoreCols=[\"id\"]):\n",
     "        self.featuresCol = featuresCol\n",
     "        self.labelCols = df.columns\n",
     "        self.labelCols.remove(\"features\")\n",
@@ -252,21 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "clr = CustomLogisticRegression()\n",
-    "clr.fit(df_train)\n",
-    "df_pred_train = clr.predict(df_train)\n",
-    "df_pred_test = clr.predict(df_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -275,38 +261,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+-----+----+----+-----+----+-----+-----+-----+-----+----+----+---------+---------+----------+---------+----------+----------+----------+----------+---------+---------+\n",
-      "|_label|_pred|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|4019_pred|2724_pred|25000_pred|4280_pred|41401_pred|53081_pred|51881_pred|42731_pred|5849_pred|5990_pred|\n",
-      "+------+-----+----+----+-----+----+-----+-----+-----+-----+----+----+---------+---------+----------+---------+----------+----------+----------+----------+---------+---------+\n",
-      "| 117.0|564.0|   0|   0|    0|   1|    1|    1|    0|    1|   0|   1|      1.0|      0.0|       0.0|      0.0|       1.0|       1.0|       0.0|       1.0|      0.0|      0.0|\n",
-      "| 132.0|  0.0|   0|   0|    1|   0|    0|    0|    0|    1|   0|   0|      0.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 672.0|672.0|   1|   0|    1|   0|    1|    0|    0|    0|   0|   0|      1.0|      0.0|       1.0|      0.0|       1.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "|  66.0| 74.0|   0|   0|    0|   1|    0|    0|    0|    0|   1|   0|      0.0|      0.0|       0.0|      1.0|       0.0|       0.0|       1.0|       0.0|      1.0|      0.0|\n",
-      "| 514.0|512.0|   1|   0|    0|   0|    0|    0|    0|    0|   1|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 560.0|816.0|   1|   0|    0|   0|    1|    1|    0|    0|   0|   0|      1.0|      1.0|       0.0|      0.0|       1.0|       1.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "|   8.0|  8.0|   0|   0|    0|   0|    0|    0|    1|    0|   0|   0|      0.0|      0.0|       0.0|      0.0|       0.0|       0.0|       1.0|       0.0|      0.0|      0.0|\n",
-      "| 288.0|512.0|   0|   1|    0|   0|    1|    0|    0|    0|   0|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 100.0| 68.0|   0|   0|    0|   1|    1|    0|    0|    1|   0|   0|      0.0|      0.0|       0.0|      1.0|       0.0|       0.0|       0.0|       1.0|      0.0|      0.0|\n",
-      "|  66.0|512.0|   0|   0|    0|   1|    0|    0|    0|    0|   1|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 652.0|512.0|   1|   0|    1|   0|    0|    0|    1|    1|   0|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 416.0|512.0|   0|   1|    1|   0|    1|    0|    0|    0|   0|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 516.0|512.0|   1|   0|    0|   0|    0|    0|    0|    1|   0|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "|   2.0|514.0|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      1.0|      0.0|\n",
-      "| 768.0|512.0|   1|   1|    0|   0|    0|    0|    0|    0|   0|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 544.0|544.0|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|      1.0|      0.0|       0.0|      0.0|       1.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 256.0|  0.0|   0|   1|    0|   0|    0|    0|    0|    0|   0|   0|      0.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "|  24.0|512.0|   0|   0|    0|   0|    0|    1|    1|    0|   0|   0|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "|  32.0|672.0|   0|   0|    0|   0|    1|    0|    0|    0|   0|   0|      1.0|      0.0|       1.0|      0.0|       1.0|       0.0|       0.0|       0.0|      0.0|      0.0|\n",
-      "| 545.0|513.0|   1|   0|    0|   0|    1|    0|    0|    0|   0|   1|      1.0|      0.0|       0.0|      0.0|       0.0|       0.0|       0.0|       0.0|      0.0|      1.0|\n",
-      "+------+-----+----+----+-----+----+-----+-----+-----+-----+----+----+---------+---------+----------+---------+----------+----------+----------+----------+---------+---------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "maxIter:  5\n",
+      "{'weightedPrecision': 0.3191686583865087, 'f1': 0.2422791139786058, 'weightedRecall': 0.25681892868879336, 'accuracy': 0.25681892868879397}\n",
+      "{'weightedPrecision': 0.10625387820800844, 'f1': 0.09190509299831698, 'weightedRecall': 0.12258191867350976, 'accuracy': 0.12258191867350968}\n",
+      "maxIter:  10\n",
+      "{'weightedPrecision': 0.7841250725433033, 'f1': 0.7620669774918355, 'weightedRecall': 0.7511994742030924, 'accuracy': 0.7511994742030891}\n",
+      "{'weightedPrecision': 0.12330947229469667, 'f1': 0.11949211928027403, 'weightedRecall': 0.12425977102250312, 'accuracy': 0.12425977102250296}\n",
+      "maxIter:  25\n",
+      "{'weightedPrecision': 0.9999712454814376, 'f1': 0.9999675758571632, 'weightedRecall': 0.9999671376930708, 'accuracy': 0.999967137693066}\n",
+      "{'weightedPrecision': 0.10715632789997416, 'f1': 0.10053642873404066, 'weightedRecall': 0.09800631662060805, 'accuracy': 0.09800631662060798}\n",
+      "maxIter:  50\n",
+      "{'weightedPrecision': 1.0000000000000049, 'f1': 1.0000000000000049, 'weightedRecall': 1.0000000000000049, 'accuracy': 1.0}\n",
+      "{'weightedPrecision': 0.10566124747545828, 'f1': 0.09863138825157139, 'weightedRecall': 0.09632846427161476, 'accuracy': 0.09632846427161469}\n",
+      "maxIter:  75\n",
+      "{'weightedPrecision': 1.0000000000000049, 'f1': 1.0000000000000049, 'weightedRecall': 1.0000000000000049, 'accuracy': 1.0}\n",
+      "{'weightedPrecision': 0.10566124747545828, 'f1': 0.09863138825157139, 'weightedRecall': 0.09632846427161476, 'accuracy': 0.09632846427161469}\n",
+      "maxIter:  100\n",
+      "{'weightedPrecision': 1.0000000000000049, 'f1': 1.0000000000000049, 'weightedRecall': 1.0000000000000049, 'accuracy': 1.0}\n",
+      "{'weightedPrecision': 0.10566124747545828, 'f1': 0.09863138825157139, 'weightedRecall': 0.09632846427161476, 'accuracy': 0.09632846427161469}\n"
      ]
     }
    ],
    "source": [
-    "print evaluate(df_pred_train, clr.labelCols)\n",
-    "print evaluate(df_pred_test, clr.labelCols)"
+    "for maxIter in [5, 10, 25, 50, 75, 100]:\n",
+    "    clr = CustomLogisticRegression()\n",
+    "    clr.fit(df_train, maxIter=maxIter)\n",
+    "    df_pred_train = clr.predict(df_train)\n",
+    "    df_pred_test = clr.predict(df_test)\n",
+    "\n",
+    "    print \"maxIter: \", maxIter\n",
+    "    print evaluate(df_pred_train, clr.labelCols)\n",
+    "    print evaluate(df_pred_test, clr.labelCols)"
    ]
   },
   {
@@ -324,11 +309,83 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.classification import RandomForestClassifier\n",
+    "\n",
+    "class CustomRandomForestClassifier:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def fit(self, df, maxDepth=5, maxBins=32, numTrees=20, regParam=0.0, featuresCol=\"features\", ignoreCols=[\"id\"]):\n",
+    "        self.featuresCol = featuresCol\n",
+    "        self.labelCols = df.columns\n",
+    "        self.labelCols.remove(\"features\")\n",
+    "        for c in ignoreCols:\n",
+    "            self.labelCols.remove(c)\n",
+    "        self.models = []\n",
+    "        \n",
+    "        for c in self.labelCols:\n",
+    "            lr = RandomForestClassifier(featuresCol=featuresCol,\n",
+    "                                        labelCol=c,\n",
+    "                                        predictionCol=c+\"_pred\",\n",
+    "                                        probabilityCol=c+\"_prob\",\n",
+    "                                        rawPredictionCol=c+\"_rpred\",\n",
+    "                                        maxDepth=maxDepth,\n",
+    "                                        maxBins=maxBins,\n",
+    "                                        impurity=\"gini\",\n",
+    "                                        numTrees=numTrees,\n",
+    "                                        seed=None)\n",
+    "            model = lr.fit(df)\n",
+    "            self.models.append(model)\n",
+    "            \n",
+    "    def predict(self, df):\n",
+    "        df_out = df\n",
+    "        for c, m in zip(self.labelCols, self.models):\n",
+    "            df_out = m.transform(df_out)\n",
+    "            \n",
+    "        return df_out"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Evaluate with our data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for maxDepth in [5, 10, 25, 50, 75, 100]:\n",
+    "    clr = CustomRandomForestClassifier()\n",
+    "    clr.fit(df_train, maxDepth=maxDepth)\n",
+    "    df_pred_train = clr.predict(df_train)\n",
+    "    df_pred_test = clr.predict(df_test)\n",
+    "\n",
+    "    print \"maxDepth: \", maxDepth\n",
+    "    print evaluate(df_pred_train, clr.labelCols)\n",
+    "    print evaluate(df_pred_test, clr.labelCols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
