add tfidf forward nn

--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -179,8 +179,7 @@
     "                                         evaluator.labelCol: \"_label\"})\n",
     "        output[m] = result\n",
     "        \n",
-    "    return output\n",
-    "    "
+    "    return output"
    ]
   },
   {
@@ -238,9 +237,7 @@
     "        for c, m in zip(self.labelCols, self.models):\n",
     "            df_out = m.transform(df_out)\n",
     "            \n",
-    "        return df_out\n",
-    "        \n",
-    "        "
+    "        return df_out"
    ]
   },
   {
@@ -399,7 +396,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -416,5 +415,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
