add glove lstm train

--- a/code/Project_bdfh_word2vec.ipynb
+++ b/code/Project_bdfh_word2vec.ipynb
@@ -363,7 +363,7 @@
     "    # \n",
     "    # Divide the result by the number of words to get the average\n",
     "    featureVec = np.divide(featureVec,nwords)\n",
-    "    return featureVec\n"
+    "    return featureVec"
    ]
   },
   {
@@ -549,7 +549,9 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -561,7 +563,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -572,5 +574,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
