--- a/code/Project_bdfh_doc2vec.ipynb
+++ b/code/Project_bdfh_doc2vec.ipynb
@@ -287,7 +287,7 @@
     "    \n",
     "list_index=sorted(range(len(cosine_results)), key=lambda i: cosine_results[i] , reverse=True)[:11]\n",
     "for i in list_index:\n",
-    "    print i, cosine_results[i]\n"
+    "    print i, cosine_results[i]"
    ]
   },
   {
@@ -348,7 +348,7 @@
     "    for i,v in enumerate(reviews):\n",
     "        label = '%s_%s'%(label_type,i)\n",
     "        labelized.append(LabeledSentence(v, [label]))\n",
-    "    return labelized\n"
+    "    return labelized"
    ]
   },
   {
@@ -690,7 +690,9 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -702,7 +704,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -713,5 +715,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
